--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resgate</title>
-  <link rel="stylesheet" href="./styles/global.css">
-</head>
-<body>
-  <div id="container">
-    <div id="fundoGame">
-      <div id="inicio">
-        <h1>Resgate</h1>
-        <p>
-          Utilize as teclas W e S para movimentar o helicóptero, e a tecla D para atirar
-        </p>
-        <p>
-          Clique aqui para iniciar!
-        </p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resgate</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+  </head>
+  <body>
+    <div id="container">
+      <div id="fundoGame">
+        <div id="inicio" onclick="start()">
+          <h1>Resgate</h1>
+          <p>
+            Utilize as teclas W e S para movimentar o helicóptero, e a tecla D
+            para atirar
+          </p>
+          <p>Clique aqui para iniciar!</p>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+
+    <script src="./js/libs/jquery-1.11.1.min.js"></script>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
