--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
 
     <script src="./js/libs/jquery-1.11.1.min.js"></script>
+    <script src="./js/libs/jquery-collision.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
