Melhora o estilo das instrucoes

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
       <div id="fundoGame">
         <div id="inicio" onclick="start()">
           <h1>Resgate</h1>
-          <p>
-            Utilize as teclas W e S para movimentar o helicóptero, e a tecla D
-            para atirar
-          </p>
-          <p>Clique aqui para iniciar!</p>
+          <ul class="instrucoes">
+            <li>
+              Utilize as teclas <b>W</b> e <b>S</b> para moivimentar o
+              helicóptero
+            </li>
+            <li>Utilize a tecla <b>D</b> para atirar</li>
+          </ul>
+          <p class="button">Clique aqui para iniciar!</p>
         </div>
       </div>
     </div>
